refactoring and test cases for CommunityRunJPAService.java. The test cases test the service layer using Arquillian